--- a/estilo/style.css
+++ b/estilo/style.css
@@ -39,24 +39,29 @@ body{
 }
 header{
     background-image:linear-gradient(to bottom,var(--cor5),var(--cor2));
-    min-height:160px;
+    
     text-align: center;
-    padding: 20px;
+    padding-top: 40px;
     text-shadow: 3px 5px 7px  rgba(0, 0, 0, 0.5);
+    margin: 0px;
 }
 header > p{
     color: white;
     font: var(--font-padrao);
     max-width: 500px;
     margin: auto;
-    margin-top: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 header > h1{
     font-family: var(--font-padrao);
     color: white;
-    font-size: 70px;
+    font-size: 3em;
     text-shadow: 3px 5px 7px  rgba(0, 0, 0, 0.5);
     font-weight: normal;
+    margin-bottom: 20px;
+    
+
    
 }
 nav{
@@ -65,10 +70,7 @@ nav{
   
     
 }
-.w3rcontainer{
-    border: 1px solid #cccfdb;
-    border-radius: 2px
-}
+
 nav  a{
     
     text-decoration: none;
@@ -90,31 +92,7 @@ nav > a:hover{
     color: #0D4547;   
     
 }
-nav > a::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 3px;
-    bottom:5px;
-    left: 0;
-    background-color: #feffff9c;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-  
-}
-nav > a:hover:after{
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-nav >a:active{
-    background-color:#30666b9c;
-    color: #051c1d;
-    
-}
-.externo::after{
-    content: '\1F517';
-}
+
 
 main{
     background-color: white;
@@ -132,7 +110,7 @@ main  h1{
     font-family: var(--font-android);
     font-size: 1.9em;
     padding: 10px;
-    min-width: 550px;
+    min-width: 300px;
     font-weight: normal
     ;
     
