--- a/estilo/style.css
+++ b/estilo/style.css
@@ -39,7 +39,7 @@ body{
 }
 header{
     background-image:linear-gradient(to bottom,var(--cor5),var(--cor2));
-    
+    min-height:150px;
     text-align: center;
     padding-top: 40px;
     text-shadow: 3px 5px 7px  rgba(0, 0, 0, 0.5);
